kubernetes/nextcloud/namespace.yml

apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    istio.io/dataplane-mode: ambient
