kubernetes/nextcloud/cron-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-cron
  namespace: nextcloud
  labels:
    app: nextcloud-cron
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nextcloud-cron
  template:
    metadata:
      labels:
        app: nextcloud-cron
    spec:
      serviceAccountName: nextcloud-cron
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: nextcloud
          image: nextcloud:34@sha256:37b109885aa3cba3e056362a899556a625c986f2c17cd2c0cc157d21c789f53b
          command: [ "/cron.sh" ]
          volumeMounts:
            - name: nextcloud-www
              mountPath: /var/www/html
            - name: music
              mountPath: /music
            - name: movies
              mountPath: /movies
            - name: tvshows
              mountPath: /tvshows
            - name: shared
              mountPath: /shared
            - name: audiobooks
              mountPath: /audiobooks
            - name: audiobooks-libation
              mountPath: /audiobooks-libation
          ports:
            - containerPort: 80
              name: http
      volumes:
        - name: nextcloud-www
          hostPath:
            path: /data/nextcloud/html
            type: DirectoryOrCreate
        - name: music
          hostPath:
            path: /data/media/music
            type: DirectoryOrCreate
        - name: movies
          hostPath:
            path: /data/media/movies
            type: DirectoryOrCreate
        - name: tvshows
          hostPath:
            path: /data/media/tvshows
            type: DirectoryOrCreate
        - name: shared
          hostPath:
            path: /data/media/shared
            type: DirectoryOrCreate
        - name: audiobooks
          hostPath:
            path: /data/media/audiobooks
            type: DirectoryOrCreate
        - name: audiobooks-libation
          hostPath:
            path: /data/media/audiobooks-libation
            type: DirectoryOrCreate
