kubernetes/nextcloud/db-dep.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: nextcloud
  labels:
    app: nextcloud-db
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nextcloud-db
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      serviceAccountName: nextcloud-db
      containers:
        - name: mariadb
          image: mariadb:13.0@sha256:f1bba652ba57bea3099ca2fe1af692af537c27d96e0bcde39dce29e2ba1ec4f3
          args:
            [
              "--transaction-isolation=READ-COMMITTED",
              "--log-bin=binlog",
              "--binlog-format=ROW",
            ]
          volumeMounts:
            - name: nextcloud-db-data
              mountPath: /var/lib/mysql
          ports:
            - containerPort: 3306
              name: mysql
      volumes:
        - name: nextcloud-db-data
          hostPath:
            path: /data/nextcloud-db
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: nextcloud
  labels:
    app: nextcloud-db
spec:
  selector:
    app: nextcloud-db
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
