kubernetes/nextcloud/web-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-web
  namespace: nextcloud
  labels:
    app: nextcloud-web
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nextcloud-web
  template:
    metadata:
      labels:
        app: nextcloud-web
    spec:
      serviceAccountName: nextcloud-web
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: nextcloud
          image: nextcloud:34@sha256:37b109885aa3cba3e056362a899556a625c986f2c17cd2c0cc157d21c789f53b
          volumeMounts:
            - name: nextcloud-www
              mountPath: /var/www/html
            - name: music
              mountPath: /music
            - name: movies
              mountPath: /movies
            - name: tvshows
              mountPath: /tvshows
            - name: shared
              mountPath: /shared
            - name: audiobooks
              mountPath: /audiobooks
          ports:
            - containerPort: 80
              name: http
      volumes:
        - name: nextcloud-www
          hostPath:
            path: /data/nextcloud/html
            type: DirectoryOrCreate
        - name: music
          hostPath:
            path: /data/media/music
            type: DirectoryOrCreate
        - name: movies
          hostPath:
            path: /data/media/movies
            type: DirectoryOrCreate
        - name: tvshows
          hostPath:
            path: /data/media/tvshows
            type: DirectoryOrCreate
        - name: shared
          hostPath:
            path: /data/media/shared
            type: DirectoryOrCreate
        - name: audiobooks
          hostPath:
            path: /data/media/audiobooks
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-svc
  namespace: nextcloud
  labels:
    app: nextcloud-web
spec:
  selector:
    app: nextcloud-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-web-route
  namespace: nextcloud
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-ingress
    - name: pangolin-gateway
      namespace: istio-ingress
  hostnames:
    - next.alexmickelson.guru
  rules:
    - backendRefs:
        - name: nextcloud-svc
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
